@@ -19,5 +19,3 @@ Write some user documentation.
 Remove every g_print and replace with groovy dialogs.
 
 Make the progress dialog modal, or disable the Extract button when ripping
-
-Need to handle the case when files exist. At the moment they are written over.
