@@ -1,6 +1,13 @@
+2003-05-28  Ross Burton  <ross@burtonini.com>
+
+	* src/cd-drive.c:
+	Updated from libbacon.
+
+	* TODO: Updated.
+
 2003-05-25  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * configure.in: Added portuguese (pt) to ALL_LINGUAS.
+	* configure.in: Added portuguese (pt) to ALL_LINGUAS.
 
 2003-05-22  Ross Burton  <ross@burtonini.com>
 
